--- a/index.html
+++ b/index.html
@@ -6,35 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=dev2ce-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script4 src="script.js" defer></script4>
+    <script src="script.js" defer></script>
     <title>Calculator</title>
 </head>
 
 <body>
 
     <div class="main-container">
-        <div class="display"></div>
+        <div class="display-container">
+            <div class="display previous-op">10000</div>
+            <div class="display current-op">20000000000</div>
+        </div>
 
         <div class="grid-container">
-            <div class="btn">CE</div>
-            <div class="btn">C</div>
-            <div class="btn backspace">BACK</div>
-            <div class="btn">+</div>
+            <div class="button function-btn clear-btn">AC</div>
+            <div class="button function-btn backspace">DEL</div>
+            <div class="btn function-btn">+</div>
             <div class="btn">1</div>
             <div class="btn">2</div>
             <div class="btn">3</div>
-            <div class="btn">-</div>
+            <div class="btn function-btn">-</div>
             <div class="btn">4</div>
             <div class="btn">5</div>
             <div class="btn">6</div>
-            <div class="btn">*</div>
+            <div class="btn function-btn">*</div>
             <div class="btn">7</div>
             <div class="btn">8</div>
             <div class="btn">9</div>
-            <div class="btn">/</div>
-            <div class="btn">.</div>
+            <div class="btn function-btn">/</div>
+            <div class="btn ">.</div>
             <div class="btn">0</div>
-            <div class="btn enter">=</div>
+            <div class="button enter-btn">=</div>
         </div>
     </div>
 </body>
