Added JS + finished

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <div class="main-container">
         <div class="display-container">
-            <div class="display previous-op">10000</div>
-            <div class="display current-op">20000000000</div>
+            <div class="display previous-op"></div>
+            <div class="display current-op">0</div>
         </div>
 
         <div class="grid-container">
             <div class="button function-btn clear-btn">AC</div>
-            <div class="button function-btn backspace">DEL</div>
+            <div class="button function-btn delete-btn">DEL</div>
             <div class="btn function-btn">+</div>
             <div class="btn">1</div>
             <div class="btn">2</div>
